--- a/Css/home.css
+++ b/Css/home.css
@@ -16,11 +16,12 @@
 }
 
 .mencoes img{
-	margin: 1rem 2rem;
+	margin: 1rem 2rem 4rem 1rem;
 	border: 1px black solid;
 	border-radius: 40px;
 	float: left;
 	transition: 0.5s;
+	box-shadow: 0.5rem 0.5rem 0.5rem 0.5rem black;
 }
 
 .mencoes img:hover{
@@ -45,6 +46,7 @@
 	font-size: 24px;
 	border: 3px #990000 solid;
 	border-radius: 30px 10px;
+	box-shadow: 0.1rem 0.1rem 4px 2px black;
 }
 
 .sobre-mim h2{
@@ -64,7 +66,7 @@
 	font-size: 24px;
 	border: 3px #990000 solid;
 	border-radius: 30px 10px;
-
+	box-shadow: 0.1rem 0.1rem 4px 2px black;
 }
 
 .habilidades h2{
